2015-10-15: Joe Hunt / Petros   Fixed correct calculation of stock_moves standard_cost when producing an Advanced Assembly.
2015-10-14: Joe Hunt / Petros  Changed the GL accounts in Manufacturing to go from Cost accounts to Assembly Accounts.
2015-10-13: Janusz Dobrowolski Fixed net value calculations for GRN leading to unbalanced clearing account.
2015-10-06: Janusz Dobrowolski Fixed deactivate_extension hook execution on extension deactivation.
2015-09-07: Joe Hunt           Improved safety handling of bad PHP interpretor releases.
2015-07-10: Janusz Dobrowolski [0003240] Tax Report: duplicated lines were listed for edited transactions.

2015-05-09 23:07:36 +0200 Joe Hunt 
Merge branch 'master' of ssh://git.code.sf.net/p/frontaccounting/git
2015-05-09 23:06:09 +0200 Joe Hunt 
New CHANGELOG.txt format.
M	CHANGELOG.txt
M	doc/CHANGELOG.old.txt

2015-05-06 22:30:47 +0200 Janusz Dobrowolski 
Fixed regression in db_pager.
M	includes/db_pager.inc

2015-04-13 19:03:26 +0200 Janusz Dobrowolski 
Empty password is forbidden when creating new user account.
M	admin/users.php

2015-04-12 00:58:31 +0200 Janusz Dobrowolski 
HTML cleanup in fiscal years selector helper.
M	includes/ui/ui_lists.inc

2015-04-29 16:39:48 +0200 Joe Hunt 
Only first item in Supplier Credit Notes had tax added. Fixed.
M	purchasing/supplier_credit.php

2015-04-29 14:18:44 +0200 Joe Hunt 
Fixed wrong headers in Supplier Credit Note.
M	purchasing/includes/ui/invoice_ui.inc

2015-04-28 16:20:06 +0200 Joe Hunt 
IE 11 doesn't work with input file type in forms. Fixed.
M	includes/page/header.inc

2015-04-11 15:57:19 +0200 Janusz Dobrowolski 
Additional syntax cleanup to previous patch.
M	includes/db_pager.inc

2015-04-11 10:30:39 +0200 Janusz Dobrowolski 
Fixed problem with counting number of rows for some SQL queries displayed in db pager.
M	gl/includes/db/gl_db_trans.inc
M	includes/db_pager.inc

2015-04-11 09:20:16 +0200 Joe Hunt 
Included option for Show Service Items in Inventory Sales Report