@@ -1,4 +1,5 @@
-2015-10-15: Joe Hunt / Petros   Fixed correct calculation of stock_moves standard_cost when producing an Advanced Assembly.
+2015-10-18: Joe Hunt / Petros  Reruns of previous commit.
+2015-10-15: Joe Hunt / Petros  Fixed correct calculation of stock_moves standard_cost when producing an Advanced Assembly.
 2015-10-14: Joe Hunt / Petros  Changed the GL accounts in Manufacturing to go from Cost accounts to Assembly Accounts.
 2015-10-13: Janusz Dobrowolski Fixed net value calculations for GRN leading to unbalanced clearing account.
 2015-10-06: Janusz Dobrowolski Fixed deactivate_extension hook execution on extension deactivation.
